<resources>
    <string name="app_name">JABApp</string>
    <string name="tab_text_1">HOME</string>
    <string name="tab_text_2">HAI</string>
    <string name="tab_text_3">PREISE</string>
    <string name="tab_text_4">GALERIE</string>
    <string name="tab_text_5">KONTAKT/ANFAHRT</string>
    <string name="tab_text_6">PARTNER</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_x" />
    <string name="tab_text_y" />

</resources>
